--- a/starship.toml
+++ b/starship.toml
@@ -38,6 +38,18 @@ staged = '[++\($count\)](green)'
 renamed = "👅"
 deleted = "🗑"
 
+[battery]
+full_symbol = "🔋 "
+
+[[battery.display]]  # "bold red" style and discharging_symbol when capacity is between 0% and 10%
+threshold = 10
+style = "bold red"
+
+[[battery.display]]  # "bold yellow" style and 💦 symbol when capacity is between 10% and 30%
+threshold = 20
+style = "bold yellow"
+discharging_symbol = "💀 "
+
 [php]
 format = "via [$symbol$version]($style) "
 symbol = "🐘 "
