chore: add tea deps

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cSpell.words": [
         "Bajaj",
         "Bynens",
+        "caddyserver",
         "Caneco",
         "chrisbbreuer",
         "dotfiles",
+        "freedesktop",
         "Laracasts",
         "mackup",
         "screencast",
