--- a/pkgx.yaml
+++ b/pkgx.yaml
@@ -1,12 +1,12 @@
 dependencies:
-  bun.sh: ^1.0.0
+  bun.sh: ^1.0.15
   # sqlite.org: ^3.42.0
-  redis.io: ^7.0.11
+  # redis.io: ^7.0.11
   aws.amazon.com/cli: ^2.13.7
   # caddyserver.com: ^2.7.4
   # info-zip.org/zip: ^3.0
   # info-zip.org/unzip: ^6.0
-  stripe.com: ^1.17.2
+  # stripe.com: ^1.17.2
   gnu.org/bash: ^5.2.15
   gnu.org/grep: ^3.11.0
   crates.io/exa: ^0.10.1
