chore: several minor updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,29 @@
         "chrisbbreuer",
         "dotfiles",
         "freedesktop",
+        "Ghostty",
+        "gifsicle",
+        "hiddenbar",
+        "imageoptim",
+        "jpegoptim",
+        "keygen",
         "Laracasts",
+        "lato",
+        "logi",
         "mackup",
+        "mediainfo",
+        "Meema",
+        "meslo",
+        "optipng",
+        "pngquant",
+        "powerline",
+        "roboto",
         "screencast",
         "Sourabh",
         "subnixr",
-        "Suttle's"
+        "Suttle's",
+        "tinkerwell",
+        "unarchiver",
+        "Wappalyzer"
     ]
 }
