chore: add iina

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Ghostty",
         "gifsicle",
         "hiddenbar",
+        "iina",
         "imageoptim",
         "jpegoptim",
         "keygen",
