--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "Meema",
         "meslo",
         "optipng",
+        "pearcleaner",
         "pngquant",
         "powerline",
         "roboto",
